# codewars_cmake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
engine/include/: Resource.h  consoleprint.h  engine.h  engine_init.cpp  game.h  gamestate.h  input.h  logging.h  model.h  model_import.h  primitives.h  py_embed.h  renderer.h  resource_management.h  shaders.h  stdafx.h  textures.h
engine/models/: plane2.mtl  plane3.mtl  quad.mtl
engine/shaders/: basic.hlsl  basic2d.hlsl
engine/src/: CodeWarsD3D11.cpp  consoleprint.cpp  engine_main.cpp  logging.cpp  model_import.cpp  model_primitives.cpp  py_embed.cpp  renderer.cpp  resource_management.cpp  script_game_module.cpp  shaders.cpp  stdafx.cpp  textures.cpp
engine/textures/: engine_splash.psd
games/assets/codewars/models/: man.mtl
games/assets/spacefight/models/: corvette1.mtl
games/assets/spacefight/py_scripts/: gamelogic.py  myfuncs.py  player_main.py
games/assets/spacefight/shaders/: basic.hlsl
games/codewars/models/: card.mtl  cub1.3ds  server.mtl
games/codewars/models/oldman/: cube2.mtl
games/codewars/src/: codewars.cpp  codewars.h
games/spacefight/models/: basic_hex.mtl  cube1.fbx
games/spacefight/models/oldman/: muro2.fbx
games/spacefight/py_scripts/: gamelogic.py
games/spacefight/src/: spacefight.cpp  spacefight.h
games/spacefight/textures/: basic_hex_uvs.psd
games/src/codewars/src/: codewars.cpp  codewars.h
games/src/koenig/src/: koenig.cpp  koenig.h
games/src/spacefight/src/: spacefight.cpp  spacefight.h
